# azureAI-sentinel

./: .env.example  .gitignore  CLAUDE.md  INITIAL-RESEARCH.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: incident-number-missing-list.md  timestamp-utc-labeling.md
.planning/phases/01-foundation/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-sentinel-data-access/: .continue-here.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-ai-orchestration-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: __main__.py  config.py  main.py  mitre.py  models.py  openai_client.py  projections.py  prompts.py  sentinel_client.py  tool_handlers.py  tools.py  vector_store.py
src/knowledge/: playbooks.py  seed_incidents.py
src/queries/: __init__.py  alerts.py  entities.py  incidents.py  trends.py
tests/: conftest.py  smoke_live.py  test_config.py  test_main.py  test_mitre.py  test_models.py  test_openai_client.py  test_prompts.py  test_queries.py  test_sentinel_client.py  test_tool_handlers.py  test_tools.py  test_vector_store.py
tests/fixtures/: chat_completion.json  content_filter_error.json  tool_call_response.json
(+8 files in other folders)
